<resources>
    <string name="app_name">WhatsApp</string>
    <string name="file_limit_size_upload_format">Files must be less than %sMB</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="agora_app_id">"1408a8f4566940118e928f6d1343cf62"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_content_tabbed">MainContentTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="video_call_channel_name">Video Call Channel</string>
    <string name="tips">"1. Default channel name is demoChannel1\n2. Waiting for remote users\n3. This demo only supports 1v1 video calling"</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="profileInfo">Profile Info</string>
    <string name="name_messages">Please provide your name and an optional profile photo</string>
    <string name="next">Next</string>
    <string name="createAccount">Create Account</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="my_status">My status</string>
    <string name="statusTime">0 minutes ago</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="title_activity_status__edit_">Status_Edit_Activity</string>
    <string name="status_disappear_message">Your status updates will disappear after 24 hours.</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="capture">Capture</string>
    <string name="file_limit_size_upload_format1">File</string>
</resources>
